--- a/captioner/app/src/main/AndroidManifest.xml
+++ b/captioner/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-feature
         android:name="android.hardware.camera.any"
         android:required="true" />
-
+    <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
 
@@ -22,7 +22,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.ImageCaptioning.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
+            <!-- configure this activity to use landscape orientation -->
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
